--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stylelint-preset",
+  "name": "@onclick/stylelint-preset",
   "version": "0.0.0",
   "description": "",
   "license": "MIT",
